# santa-lang-dasher

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  LANG.txt  LICENSE  Makefile  PLAN-ALIGNMENT.md  PLAN.md  README.md  continue.sh
.cargo/: config.toml
.github/workflows/: build-cli.yml  build.yml  publish.yml  test.yml
benchmarks/: Cargo.toml
benchmarks/benches/: compiler_benchmarks.rs
cli/: Cargo.toml
cli/fixtures/: script.santa  solution.santa  solution_with_slow_test.santa
cli/src/: main.rs  output.rs
cli/tests/: integration_tests.rs
docs/: ARCHITECTURE.md
examples/: basic_math.santa  builtins_core.santa  builtins_extended.santa  closures.santa  collection_modification.santa  composition.santa  conditionals.santa  let_bindings.santa  map_builtin.santa  match_patterns.santa  nested_conditionals.santa  partial_application.santa  recursive_sum.santa  run-tests.sh  sequence_generators.santa  variable_shadowing.santa
examples/aoc2022/: aoc2022_day01  aoc2022_day01.santa  aoc2022_day10.santa  aoc2022_day11.santa  aoc2022_day12.santa  aoc2022_day14.santa  aoc2022_day15.santa
lang/: Cargo.toml  build.rs
lang/src/: error.rs  lib.rs
lang/src/codegen/: compiler.rs  context.rs  mod.rs  pipeline.rs  tests.rs
lang/src/error/: tests.rs
lang/src/lexer/: mod.rs  tests.rs  token.rs
lang/src/parser/: ast.rs  mod.rs  tests.rs
lang/src/runner/: mod.rs  tests.rs
lang/src/runtime/: builtins.rs  collections.rs  heap.rs  mod.rs  operations.rs  string.rs  tests.rs  value.rs
lang/src/types/: builtins.rs  infer.rs  mod.rs  tests.rs  ty.rs  unify.rs
runtime/: Cargo.toml
runtime/src/: break_handling.rs  builtin_registry.rs  builtins.rs  collections.rs  heap.rs  lib.rs  operations.rs  refcount.rs  string.rs  tests.rs  value.rs
