[package]
name = "benchmarks"
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true

[[bench]]
name = "compiler_benchmarks"
harness = false

[dependencies]
lang = { path = "../lang" }
runtime = { path = "../runtime" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
inkwell = { version = "0.5", features = ["llvm18-0"] }
