[package]
name = "santa-lang"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
# inkwell.workspace = true  # Not needed until Phase 6 (Codegen)
im.workspace = true  # Phase 5 (Runtime) - persistent data structures
ordered-float.workspace = true  # Phase 5 (Runtime) - hashable floats
unicode-segmentation.workspace = true  # Needed for Phase 1 (strings)
regex.workspace = true  # Needed for Phase 14 (Built-ins)

[dev-dependencies]
expect-test.workspace = true
