[package]
name = "santa-lang"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
inkwell.workspace = true  # Phase 6 (Codegen)
santa-lang-runtime = { path = "../runtime" }  # Runtime library (re-exported)

[dev-dependencies]
expect-test.workspace = true
