[package]
name = "santa-lang-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
im.workspace = true
ordered-float.workspace = true
unicode-segmentation.workspace = true
regex.workspace = true
md-5.workspace = true
dirs.workspace = true

[dev-dependencies]
expect-test.workspace = true
